# aseprite-build

./: build.cmd  build.ps1
.github/workflows/: build_and_release.yaml
laf/: .git-blame-ignore-revs  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md
laf/base/: 24bits.h  CMakeLists.txt  base.h  base64.cpp  base64.h  base64_tests.cpp  cfile.cpp  cfile.h  chrono.cpp  chrono.h  chrono_unix.h  chrono_win32.h  codepoint.h  concurrent_queue.h  contains.h  contains_tests.cpp  convert_to.cpp  convert_to.h  count_bits.h  count_bits_tests.cpp  debug.cpp  debug.h  disable_copying.h  dll.cpp  dll.h  dll_win32.h  enum_flags.h  enum_flags_tests.cpp  errno_string.cpp  exception.cpp  exception.h  file_content.cpp  file_content.h  file_content_tests.cpp  file_handle.cpp  file_handle.h  file_handle_tests.cpp  fs.cpp  fs.h  fs_osx.mm  (+80 more)
laf/clip/: CMakeLists.txt
laf/cmake/: FindSkia.cmake
laf/dlgs/: CMakeLists.txt  file_dialog.cpp  file_dialog.h  file_dialog_osx.mm  file_dialog_x11.cpp
laf/dlgs/win/: dlgs_process.cpp  file_dialog_win.cpp  file_dialog_win_safe.cpp
laf/docs/: README.md
laf/examples/: CMakeLists.txt  (+14 more)
laf/text/: CMakeLists.txt  draw_text.cpp  draw_text.h  draw_text_shaper.cpp  empty_font_mgr.cpp  font.h  font_hinting.h  font_metrics.h  font_mgr.cpp  font_mgr.h  font_style.h  font_style_set.h  font_type.h  freetype_font.cpp  freetype_font.h  fwd.h  shaper_features.h  skia_font.cpp  skia_font.h  skia_font_mgr.cpp  skia_font_mgr.h  skia_text_blob.cpp  skia_text_blob.h  skia_text_blob_shaper.cpp  sprite_sheet_font.cpp  sprite_sheet_font.h  sprite_sheet_typeface.cpp  sprite_sheet_typeface.h  sprite_text_blob.cpp  sprite_text_blob.h  sprite_text_blob_shaper.cpp  text.h  text_blob.cpp  text_blob.h  text_blob_shaper.cpp  typeface.h
(+188 files in other folders)
